--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context="com.mobilesafe.activity.SplashActivity"
     android:background="@drawable/launcher_bg"
-    >
+    android:id="@+id/rl_root">
 
     <TextView
         android:id="@+id/tv_version"
@@ -20,6 +20,7 @@
         android:textSize="25sp"/>
 
     <ProgressBar
+        android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_version"
